# cosmos

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  phase_1.md
apple/Orion/: Package.swift
apple/Orion/Config/: Debug.xcconfig  Release.xcconfig  Secrets.xcconfig.template
apple/Orion/Orion.xcodeproj/: project.pbxproj
apple/Orion/Resources/: Info.plist
apple/Orion/Sources/App/: ContentView.swift  OrionApp.swift
apple/Orion/Sources/Components/: MessageWebView.swift  SearchBox.swift  ShortcutsHelpView.swift
apple/Orion/Sources/Services/: AuthService.swift  MailBridge.swift  OrionLogger.swift  RustLogger.swift
apple/Orion/Sources/Theme/: OrionTheme.swift
apple/Orion/Sources/Views/: SearchResultsView.swift  SidebarView.swift  ThreadDetailView.swift  ThreadListView.swift
crates/apps/orion/: Cargo.toml
crates/apps/orion/assets/: icon.icns
crates/apps/orion/src/: app.rs  assets.rs  main.rs  templates.rs
crates/apps/orion/src/components/: account_item.rs  message_card.rs  mod.rs  search_box.rs  search_result_item.rs  shortcuts_help.rs  sidebar.rs  thread_list_item.rs
crates/apps/orion/src/input/: actions.rs  keymap.rs  mod.rs
crates/apps/orion/src/views/: inbox.rs  mod.rs  search_results.rs  thread.rs  thread_list.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/mail/: Cargo.toml
crates/mail-ffi/: Cargo.toml  uniffi-bindgen.rs  uniffi.toml
crates/mail-ffi/src/: lib.rs
crates/mail/src/: config.rs  lib.rs
crates/mail/src/actions/: handler.rs  mod.rs
crates/mail/src/ffi/: logging.rs  mod.rs  service.rs  types.rs
crates/mail/src/gmail/: auth.rs  client.rs  mod.rs  normalize.rs
crates/mail/src/models/: account.rs  label.rs  message.rs  mod.rs  sync_state.rs  thread.rs
crates/mail/src/query/: mod.rs  threads.rs
crates/mail/src/search/: index.rs  mod.rs  query_parser.rs  schema.rs
crates/mail/src/storage/: blob.rs  blob_file.rs  heed.rs  memory.rs  mod.rs  persistent.rs  sqlite.rs  traits.rs
crates/mail/src/sync/: inbox.rs  mod.rs  timing.rs
crates/mail/tests/: integration_tests.rs
docs/: async.md  phase_2.md  phase_3.md  superhuman_prompt.txt  ui.md  workflows.md
script/: build-gpui-release  build-xcframework  bundle-mac  clean  create-icns  run-gpui  run-ios  run-macos  setup-credentials  xcode
secrets/: google-credentials.json.template
