[package]
name = "mail"
version = "0.1.0"
edition = "2024"

[lib]
name = "mail"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
config = { version = "0.1.0", path = "../config" }
open = "5.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
ureq = { version = "3.1.4", features = ["json"] }
url = "2.5.7"
urlencoding = "2.1.3"

[dev-dependencies]
tokio-test = "0.4.4"
