[package]
name = "orion"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "orion"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
config = { version = "0.1.0", path = "../../config" }
env_logger = "0.11.8"
gpui = "0.2.2"
gpui-component = "0.5.0"
log = "0.4.29"
mail = { version = "0.1.0", path = "../../mail" }
tokio = { version = "1.48.0", features = ["full"] }
