[package]
name = "orion"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "orion"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
config = { version = "0.1.0", path = "../../config" }
env_logger = "0.11.8"
gpui = "0.2.2"
gpui-component = { version = "0.5.0", features = ["webview"] }
gpui-component-assets = "0.5.0"
log = "0.4.29"
mail = { version = "0.1.0", path = "../../mail" }
rust-embed = "8.9.0"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
wry = { version = "0.53.3", package = "lb-wry" }
